fix: adjust front page alignment

--- a/sass/components/_backgrounds.scss
+++ b/sass/components/_backgrounds.scss
@@ -112,12 +112,12 @@
             width: 800px;
         }
         .background-rec-bottom{
-            transform: translate(-300px, 2200px) rotate(-34deg);
+            transform: translate(-400px, 2650px) rotate(-34deg);
             height: 590px;
             width: 2550px;
         }
         .background-rec-bottom-two{
-            transform: translate(-550px ,3000px) rotate(53deg);
+            transform: translate(-850px ,3000px) rotate(53deg);
             height: 625px;
         }
     }
@@ -149,6 +149,6 @@
     .background-cover-bottom {
         transform: translate(0, 0);
         bottom: 0;
-        height: 575px;
+        height: 565px;
     }
 }
