--- a/style.css
+++ b/style.css
@@ -1731,13 +1731,13 @@ div.customer-story-box {
             transform: translate(-625px, -975px) rotate(-124deg);
     width: 800px; }
   .front-page-shapes .all-shapes-wrapper .background-rec-bottom {
-    -webkit-transform: translate(-300px, 2200px) rotate(-34deg);
-            transform: translate(-300px, 2200px) rotate(-34deg);
+    -webkit-transform: translate(-400px, 2650px) rotate(-34deg);
+            transform: translate(-400px, 2650px) rotate(-34deg);
     height: 590px;
     width: 2550px; }
   .front-page-shapes .all-shapes-wrapper .background-rec-bottom-two {
-    -webkit-transform: translate(-550px, 3000px) rotate(53deg);
-            transform: translate(-550px, 3000px) rotate(53deg);
+    -webkit-transform: translate(-850px, 3000px) rotate(53deg);
+            transform: translate(-850px, 3000px) rotate(53deg);
     height: 625px; }
 
 .what-we-offer-shapes .all-shapes-wrapper {
@@ -1780,4 +1780,4 @@ div.customer-story-box {
   -webkit-transform: translate(0, 0);
           transform: translate(0, 0);
   bottom: 0;
-  height: 575px; }
+  height: 565px; }
